# windowmanager-service

./: .gitreview  CMakeLists.txt  README.md  generate-binding-glue.py  layers.json  layers.json.split  windowmanager.pc.in
client/: README
conf/: areas.json  old_roles.json
doc/: ApplicationGuide.md  api-services-book.yml
include/: hmi-debug.h
libwindowmanager/: CMakeLists.txt  libwindowmanager.cpp  libwindowmanager.h
libwindowmanager/doc/: CMakeLists.txt  GNUmakefile  LibWindowmanager.md  LibWindowmanager.txt
package/root/: config.xml
policy_manager/: CMakeLists.txt  policy_manager.cpp  policy_manager.hpp
policy_manager/db/: roles.db  roles.db.zipc  roles.db.zipc.split  states.db
policy_manager/stm/: stm.c  stm.h
policy_manager/stm/stub/: CMakeLists.txt  stm_inner.c  stm_inner.h
policy_manager/stm/zipc/: CMakeLists.txt  stm_inner.h
policy_manager/stm/zipc/Common/: MisraCType.h
policy_manager/stm/zipc/StateTransitionor/: ZST_StateTransitionor_def.h  ZST_StateTransitionor_func.c  ZST_StateTransitionor_func.h  ZST_include.h
policy_manager/stm/zipc/StateTransitionor/AppsLayer/: ZAPL_AppsLayer.h  ZAPL_Apps_func.c  ZAPL_Apps_func.h
policy_manager/stm/zipc/StateTransitionor/HomeScreenLayer/: ZHSL_HomeScreen.c  ZHSL_HomeScreen_func.c  ZHSL_HomeScreen_func.h
policy_manager/stm/zipc/StateTransitionor/NearHomeScreen/: ZNHL_NearHomeScreen_func.c  ZNHL_NearHomeScreen_func.h  ZNHL_NearHomescreen.c
policy_manager/stm/zipc/StateTransitionor/OnScreenlayer/: ZOSL_OnScreen_func.h
policy_manager/stm/zipc/StateTransitionor/RestrictionLayer/: ZREL_RelMain.c  ZREL_Restriction_func.c
policy_manager/stm/zipc/StateTransitionor/RestrictionMode/: ZREM_RestrictionMode_func.c  ZREM_RestrictionMode_func.h
scripts/: CMakeLists.txt  wm-request
src/: CMakeLists.txt  afb_binding_api.cpp  afb_binding_api.hpp  app.cpp  app.hpp  applist.cpp  applist.hpp  config.cpp  config.hpp  controller_hooks.hpp  json_helper.cpp  json_helper.hpp  layers.cpp  layers.hpp  layout.cpp  layout.hpp  main.cpp  pm_wrapper.cpp  pm_wrapper.hpp  policy.hpp  redraw_fixer.cpp  request.hpp  result.hpp  util.cpp  util.hpp  wayland.cpp  wayland.hpp  wayland_ivi_wm.cpp  wayland_ivi_wm.hpp  window_manager.cpp  window_manager.hpp  wm_client.cpp  wm_client.hpp  wm_layer.cpp  wm_layer.hpp  wm_layer_control.cpp  wm_layer_control.hpp
src/db/: areas.db  old_roles.db
src/policy_manager/: CMakeLists.txt  policy_manager.cpp  policy_manager.hpp
src/policy_manager/db/: layouts.db  roles.db  roles.db.split
src/policy_manager/stm/stub/src/: CMakeLists.txt  stm.c
src/policy_manager/stm/stub/src/include/: stm.h
src/policy_manager/stm/zipc/src/: CMakeLists.txt
src/policy_manager/stm/zipc/src/Common/: Event.h  ZCommonInclude.h
src/policy_manager/stm/zipc/src/StateTransitionor/: ZST_StateTransitionor_def.h  ZST_StateTransitionor_func.c  ZST_StateTransitionor_func.h  ZST_StateTransitionor_var.c  ZST_StateTransitionor_var.h
src/policy_manager/stm/zipc/src/StateTransitionor/AppsLayer/: ZAPL_AppsLayer.c
src/policy_manager/stm/zipc/src/StateTransitionor/HomeScreenLayer/: ZHSL_HomeScreen.h
src/policy_manager/stm/zipc/src/StateTransitionor/NearHomeScreen/: ZNHL_NearHomescreen.h
src/policy_manager/stm/zipc/src/StateTransitionor/OnScreenlayer/: ZOSL_OnScreen_func.c  ZOSL_OslMain.c  ZOSL_OslMain.h
src/policy_manager/stm/zipc/src/StateTransitionor/RestrictionLayer/: ZREL_RelMain.h  ZREL_Restriction_func.h
src/policy_manager/stm/zipc/src/StateTransitionor/RestrictionMode/: ZREM_RestrictionMode.c  ZREM_RestrictionMode.h
src/policy_manager/stm/zipc/src/include/: stm.h
tests/: wm-request
